// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformations 1`] = `
{
  "avgDailyPopulation": 54,
  "displayName": "Walter Harris",
  "district": "Unit 1",
  "email": "officer1@recidiviz.org",
  "externalId": "OFFICER4",
  "fullName": {
    "givenNames": "Walter",
    "surname": "Harris",
  },
  "includeInOutcomes": true,
  "latestLoginDate": 2021-12-16T00:00:00.000Z,
  "pseudonymizedId": "hashed-so1",
  "supervisorExternalIds": [
    "agonzalez123",
    "dlee456",
  ],
  "zeroGrantOpportunities": [
    "LSU",
    "pastFTRD",
  ],
}
`;

exports[`transformations 2`] = `
{
  "avgDailyPopulation": 12,
  "displayName": "Jack Hernandez",
  "district": "Unit 1",
  "email": null,
  "externalId": "so2",
  "fullName": {
    "givenNames": "Jack",
    "surname": "Hernandez",
  },
  "includeInOutcomes": true,
  "latestLoginDate": 2021-12-15T00:00:00.000Z,
  "pseudonymizedId": "hashed-so2",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 3`] = `
{
  "avgDailyPopulation": 32,
  "displayName": "Jason Nelson",
  "district": "Unit 1",
  "email": "officer3@recidiviz.org",
  "externalId": "so3",
  "fullName": {
    "givenNames": "Jason",
    "surname": "Nelson",
  },
  "includeInOutcomes": true,
  "latestLoginDate": null,
  "pseudonymizedId": "hashed-so3",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 4`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Carl Mark Campbell",
  "district": "Unit 1",
  "email": "officer4@recidiviz.org",
  "externalId": "so4",
  "fullName": {
    "givenNames": "Carl",
    "middleNames": "Mark",
    "surname": "Campbell",
  },
  "includeInOutcomes": true,
  "latestLoginDate": 2021-12-09T00:00:00.000Z,
  "pseudonymizedId": "hashed-so4",
  "supervisorExternalIds": [
    "dlee456",
  ],
}
`;

exports[`transformations 5`] = `
{
  "avgDailyPopulation": null,
  "displayName": "Casey Ramirez",
  "district": "Unit 1",
  "email": "officer5@recidiviz.org",
  "externalId": "so5",
  "fullName": {
    "givenNames": "Casey",
    "surname": "Ramirez",
  },
  "includeInOutcomes": true,
  "latestLoginDate": null,
  "pseudonymizedId": "hashed-so5",
  "supervisorExternalIds": [
    "rsmith789",
  ],
}
`;

exports[`transformations 6`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Elizabeth Ramirez",
  "district": "Unit 4",
  "email": "officer8@recidiviz.org",
  "externalId": "so8",
  "fullName": {
    "givenNames": "Elizabeth",
    "surname": "Ramirez",
  },
  "includeInOutcomes": true,
  "latestLoginDate": 2021-11-17T00:00:00.000Z,
  "pseudonymizedId": "hashed-so8",
  "supervisorExternalIds": [
    "rsmith789",
  ],
}
`;

exports[`transformations 7`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Harriet Boyd",
  "district": "Unit 1",
  "email": "officer9@recidiviz.org",
  "externalId": "so9",
  "fullName": {
    "givenNames": "Harriet",
    "surname": "Boyd",
  },
  "includeInOutcomes": true,
  "latestLoginDate": 2021-11-16T00:00:00.000Z,
  "pseudonymizedId": "hashed-so9",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 8`] = `
{
  "avgDailyPopulation": 43,
  "displayName": "Stephen Mann",
  "district": "Unit 1",
  "email": "officer10@recidiviz.org",
  "externalId": "so10",
  "fullName": {
    "givenNames": "Stephen",
    "surname": "Mann",
  },
  "includeInOutcomes": true,
  "latestLoginDate": 2021-11-15T00:00:00.000Z,
  "pseudonymizedId": "hashed-so10",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 9`] = `
{
  "avgDailyPopulation": null,
  "displayName": "John Harris",
  "district": "Unit 3",
  "email": "officer6@recidiviz.org",
  "externalId": "so6",
  "fullName": {
    "givenNames": "John",
    "surname": "Harris",
  },
  "latestLoginDate": 2021-09-06T00:00:00.000Z,
  "pseudonymizedId": "hashed-so6",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 10`] = `
{
  "avgDailyPopulation": 8,
  "displayName": "Larry Hernandez",
  "district": "Unit 2",
  "email": "officer7@recidiviz.org",
  "externalId": "so7",
  "fullName": {
    "givenNames": "Larry",
    "surname": "Hernandez",
  },
  "latestLoginDate": 2020-12-16T00:00:00.000Z,
  "pseudonymizedId": "hashed-so7",
  "supervisorExternalIds": [
    "agonzalez123",
  ],
}
`;

exports[`transformations 11`] = `
{
  "avgDailyPopulation": 8,
  "displayName": "Jacquline Fordman",
  "district": "N/A",
  "email": "officer8@recidiviz.org",
  "externalId": "so11",
  "fullName": {
    "givenNames": "Jacquline",
    "surname": "Fordman",
  },
  "latestLoginDate": null,
  "pseudonymizedId": "hashed-so11",
  "supervisorExternalIds": [
    "cthomas321",
  ],
}
`;
